# raum

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  _typos.toml  deny.toml  prek.toml  release-plz.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml  propose-release.yml  release.yml
crates/raum-core/: Cargo.toml
crates/raum-core/src/: adapters.rs  agent.rs  agent_state.rs  config.rs  lib.rs  logging.rs  paths.rs  prereqs.rs  project.rs  sigil.rs  store.rs
crates/raum-core/src/adapters/: claude_code.rs  codex.rs  mod.rs  opencode.rs
crates/raum-core/src/config_io/: managed_json.rs  managed_toml.rs  mod.rs
crates/raum-core/src/harness/: channel.rs  claude_code.rs  codex.rs  event.rs  hook_script.rs  launch.rs  mod.rs  opencode.rs  opencode_reply.rs  opencode_sse.rs  reply.rs  setup.rs  traits.rs
crates/raum-core/tests/: install_writes_hook_scripts.rs  no_outbound_network.rs  notification_roundtrip.rs
crates/raum-hooks/: Cargo.toml
crates/raum-hooks/src/: lib.rs  scripts.rs  socket.rs
crates/raum-hydration/: Cargo.toml
crates/raum-hydration/src/: hooks.rs  hydrate.rs  lib.rs  pattern.rs  prefix.rs  worktree.rs
crates/raum-hydration/tests/: worktree_integration.rs
crates/raum-tmux/: Cargo.toml
crates/raum-tmux/src/: lib.rs  manager.rs  pty_bridge.rs  stream.rs
crates/raum-tmux/tests/: capture_text.rs  perf_smoke.rs  recovery.rs
docs/: config.md  harness-integration.md  harnesses.md  privacy.md  quickstart.md  release.md
docs/proposals/: last-prompt-display.md
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/scripts/: extract-icons.mjs  perf-grid.ts  sync-themes.ts
frontend/src/: app.test.tsx  app.tsx  main.tsx  styles.css  test-setup.ts
frontend/src/components/: add-project-modal.tsx  cheat-sheet.tsx  create-worktree-modal.test.tsx  create-worktree-modal.tsx  cross-project-overlay.tsx  delete-worktree-modal.tsx  diff-viewer-modal.tsx  divider-layer.tsx  dock.test.tsx  dock.tsx  file-editor-modal.tsx  global-search-panel.test.tsx  global-search-panel.tsx  grid-builder.tsx  hydration-file-tree.tsx  keymap-settings-modal.tsx  minimized-dock.tsx  onboarding-intro-step.tsx  onboarding-wizard.tsx  operation-progress.tsx  project-settings-dialog.tsx  project-settings.tsx  settings-modal.tsx  sidebar.test.tsx  sidebar.tsx  spotlight-dock.tsx  terminal-grid.surface.test.tsx  terminal-grid.tsx  terminal-pane.tsx  top-row.tsx  unlink-project-modal.tsx  worktree-config-editor.tsx
frontend/src/components/icons/: activity.tsx  alert-circle.tsx  check.tsx  chevron-down.tsx  claude-code.tsx  clock.tsx  codex.tsx  compact.tsx  copy.tsx  folder.tsx  git-branch.tsx  grid-equal.tsx  grid-tile.tsx  index.ts  keyboard.tsx  loader.tsx  opencode.tsx  play.tsx  plus.tsx  raum-logo.tsx  search.tsx  shell.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  kbd.tsx  popover.tsx  scrollable.tsx  sonner.tsx  switch.tsx  tabs.tsx  text-field.tsx  tooltip.tsx
frontend/src/lib/: accelerator.ts  agentKind.ts  applyPreset.test.ts  applyPreset.ts  crossProjectProjection.test.ts  crossProjectProjection.ts  devOnboardingPreview.ts  devtoolsShortcut.ts  fileDrop.test.ts  fileDrop.ts  fileTypeIcon.tsx  fileUtils.ts  gridstackAdapter.test.ts  gridstackAdapter.ts  harnessTabLabel.test.ts  harnessTabLabel.ts  keymapContext.tsx  layoutTree.test.ts  layoutTree.ts  notificationCenter.focus.test.ts  notificationCenter.test.ts  notificationCenter.ts  notificationCenter.window-focus.test.ts  operationProgress.ts  paneDnD.ts  pathDisplay.test.ts  pathDisplay.ts  perf.test.ts  perf.ts  projectColors.ts  projectSigils.ts  recentSearchStore.ts  rendererScheduler.test.ts  rendererScheduler.ts  resolveSpawnWorktree.ts  scopedProjection.test.ts  scopedProjection.ts  scrollbackConfig.ts  scrollbackSearch.ts  searchPanelState.ts  (+14 more)
frontend/src/lib/theme/: applyChrome.test.ts  applyChrome.ts  cmTheme.test.ts  cmTheme.ts  normalize.test.ts  normalize.ts  themeController.test.ts  themeController.ts  toXtermTheme.ts  types.ts
frontend/src/stores/: agentStore.test.ts  agentStore.ts  harnessStatusStore.ts  layoutPresetStore.test.ts  layoutPresetStore.ts  projectStore.test.ts  projectStore.ts  runtimeLayoutStore.test.ts  runtimeLayoutStore.ts  terminalStore.test.ts  terminalStore.ts  worktreeStore.ts
frontend/src/themes/assets/: raum-default-dark.json
frontend/src/themes/catalog/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  github-dark.json  github-light.json  index.ts  monokai.json  nord.json  one-dark-pro.json  raum-default-dark.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
frontend/src/themes/catalog/LICENSES/: catppuccin-latte.txt  dracula.txt  github-light.txt  nord.txt  one-dark-pro.txt  rose-pine.txt  solarized-dark.txt  tokyo-night.txt
packaging/homebrew/: README.md
packaging/homebrew/Casks/: raum.rb
scripts/: fetch-fonts.sh
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/icon-compiled/: AppIcon.icns  Assets.car
src-tauri/src/: cli.rs  keymap.rs  lib.rs  main.rs  notifications.rs  path_env.rs  state.rs
src-tauri/src/commands/: agent.rs  agent_hydrate.rs  config.rs  devtools.rs  files.rs  git_watcher.rs  harness.rs  harness_runtime.rs  hotkeys.rs  layouts.rs  mod.rs  notifications.rs  permission.rs  project.rs  search.rs  terminal.rs  updater.rs  worktree.rs  worktree_progress.rs
