[workspace]
resolver = "2"
members = [
    "crates/raum-core",
    "crates/raum-tmux",
    "crates/raum-hydration",
    "crates/raum-hooks",
    "src-tauri",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["raum contributors"]
repository = "https://github.com/andremonaco/raum"
homepage = "https://github.com/andremonaco/raum"
rust-version = "1.85"

[workspace.lints.rust]
# `deny` (not `forbid`) so narrowly scoped `#[allow(unsafe_code)]` escape hatches
# are available for the handful of cases where the std API is `unsafe` only to
# enforce caller-controlled invariants (e.g. `std::env::set_var` in Rust 2024).
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
redundant_closure_for_method_calls = "allow"
struct_excessive_bools = "allow"
default_trait_access = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
unused_self = "allow"
needless_return = "allow"
single_match_else = "allow"
ignored_unit_patterns = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
inefficient_to_string = "allow"
explicit_iter_loop = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
