[package]
name = "raum"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "raum: lightning-fast, recoverable terminals for AI agent harnesses."
default-run = "raum"

[lints]
workspace = true

[lib]
name = "raum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
raum-core = { path = "../crates/raum-core" }
raum-tmux = { path = "../crates/raum-tmux" }
raum-hydration = { path = "../crates/raum-hydration" }
raum-hooks = { path = "../crates/raum-hooks" }

tauri = { version = "2", features = ["image-png"] }
tauri-plugin-decorum = "1"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
ignore = "0.4"
notify = "6"
dirs = "6"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-user-notifications = { version = "0.3", features = [
    "block2",
    "UNNotificationSettings",
    "UNUserNotificationCenter",
] }

[dev-dependencies]
tempfile = "3"
tracing-test = "0.2"

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber"]

[features]
custom-protocol = ["tauri/custom-protocol"]
# Enable the WebView devtools in release builds. Debug builds already get
# devtools automatically via `debug_assertions`. Power users who build from
# source can opt in with `cargo tauri build --features devtools`.
devtools = ["tauri/devtools"]
