[package]
name = "raum-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "raum core: config types, project model, agent adapter trait, state types."

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
directories = "5"
async-trait = "0.1"
tokio = { version = "1", features = [
    "sync",
    "fs",
    "io-util",
    "time",
    "net",
    "rt",
    "process",
    "macros",
] }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
slug = "0.1"
once_cell = "1"
parking_lot = "0.12"
which = "8"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
futures-util = { version = "0.3", default-features = false }
bytes = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
# Phase 5 E2E tests: some tests mutate process-wide state (env vars,
# $HOME, $RAUM_EVENT_SOCK) and must not run concurrently.
serial_test = "3"
# Phase 5 round-trip tests drive the real Unix-domain event socket
# via raum-hooks. Kept as a dev-dep (not a main dep) because raum-core
# owns the script bodies; raum-hooks is the runtime consumer.
raum-hooks = { path = "../raum-hooks" }

[package.metadata.cargo-machete]
# Used via re-exports or macro expansion that machete cannot trace statically.
ignored = ["directories", "notify", "once_cell", "parking_lot"]
