[package]
name = "raum-hydration"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "raum worktree hydration (speck-style copy + symlink) and path-pattern resolution."

[lints]
workspace = true

[dependencies]
raum-core = { path = "../raum-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
slug = "0.1"
whoami = "1"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["serde", "whoami"]
