[package]
name = "raum-tmux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "raum tmux multiplexer wrapper: session orchestration, output streaming, coalescing."

[lints]
workspace = true

[dependencies]
raum-core = { path = "../raum-core" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
